<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/round2Team1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/team_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/round2Team2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/R2got22"
        android:layout_alignParentRight="true"
        android:text="@string/team_two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R2got22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/round2Team1Text"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/got22"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R2closedNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/R2got22"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/closed_natural"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R2closedUnnatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/R2closedNatural"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/closed_unnatural"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R2PointsInHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R2closedUnnatural"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/pts_in_hand"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R2PointsOnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R2PointsInHand"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/pts_on_table"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <EditText
        android:id="@+id/R2T1Naturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2closedNatural"
        android:layout_alignBottom="@+id/R2closedNatural"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/R2closedNatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T2Naturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2closedNatural"
        android:layout_alignBottom="@+id/R2closedNatural"
        android:layout_toRightOf="@+id/R2closedNatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T1got22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2got22"
        android:layout_alignBottom="@+id/R2got22"
        android:layout_toLeftOf="@+id/R2got22"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T2got22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2got22"
        android:layout_alignBottom="@+id/R2got22"
        android:layout_toRightOf="@+id/R2got22"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T1Unnaturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2closedUnnatural"
        android:layout_alignBottom="@+id/R2closedUnnatural"
        android:layout_toLeftOf="@+id/R2closedUnnatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T2Unnaturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2closedUnnatural"
        android:layout_alignBottom="@+id/R2closedUnnatural"
        android:layout_toRightOf="@+id/R2closedUnnatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T1PointsInHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2PointsInHand"
        android:layout_alignBottom="@+id/R2PointsInHand"
        android:layout_toLeftOf="@+id/R2PointsInHand"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T2PointsInHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2PointsInHand"
        android:layout_alignBottom="@+id/R2PointsInHand"
        android:layout_toRightOf="@+id/R2PointsInHand"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T1PointsOnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2PointsOnTable"
        android:layout_alignBottom="@+id/R2PointsOnTable"
        android:layout_toLeftOf="@+id/R2PointsOnTable"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R2T2PointsOnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R2PointsOnTable"
        android:layout_alignBottom="@+id/R2PointsOnTable"
        android:layout_toRightOf="@+id/R2PointsOnTable"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="playThirdRound"
        android:text="@string/next_step" />

</RelativeLayout>