<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/round4Team1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/team_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/round4Team2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/team_two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R4got22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/round4Team1Text"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/got22"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R4closedNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R4got22"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/closed_natural"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R4closedUnnatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R4closedNatural"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/closed_unnatural"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R4PointsInHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R4closedUnnatural"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/pts_in_hand"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
        android:id="@+id/R4PointsOnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R4PointsInHand"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/pts_on_table"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:context=".RoundOne" />

    <TextView
            android:id="@+id/R4Spp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/R4PointsOnTable"
            android:layout_centerHorizontal="true"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:text="@string/sp_pile"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:context=".RoundOne" />

    <EditText
        android:id="@+id/R4T1Naturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4closedNatural"
        android:layout_alignBottom="@+id/R4closedNatural"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/R4closedNatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T2Naturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4closedNatural"
        android:layout_alignBottom="@+id/R4closedNatural"
        android:layout_toRightOf="@+id/R4closedNatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T1got22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4got22"
        android:layout_alignBottom="@+id/R4got22"
        android:layout_toLeftOf="@+id/R4got22"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T2got22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4got22"
        android:layout_alignBottom="@+id/R4got22"
        android:layout_toRightOf="@+id/R4got22"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T1Unnaturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4closedUnnatural"
        android:layout_alignBottom="@+id/R4closedUnnatural"
        android:layout_toLeftOf="@+id/R4closedUnnatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T2Unnaturals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4closedUnnatural"
        android:layout_alignBottom="@+id/R4closedUnnatural"
        android:layout_toRightOf="@+id/R4closedUnnatural"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T1PointsInHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4PointsInHand"
        android:layout_alignBottom="@+id/R4PointsInHand"
        android:layout_toLeftOf="@+id/R4PointsInHand"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T2PointsInHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4PointsInHand"
        android:layout_alignBottom="@+id/R4PointsInHand"
        android:layout_toRightOf="@+id/R4PointsInHand"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T1PointsOnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4PointsOnTable"
        android:layout_alignBottom="@+id/R4PointsOnTable"
        android:layout_toLeftOf="@+id/R4PointsOnTable"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/R4T2PointsOnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R4PointsOnTable"
        android:layout_alignBottom="@+id/R4PointsOnTable"
        android:layout_toRightOf="@+id/R4PointsOnTable"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
            android:id="@+id/R4T1Spp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/R4Spp"
            android:layout_alignBottom="@+id/R4Spp"
            android:layout_toLeftOf="@+id/R4Spp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number" />

    <EditText
            android:id="@+id/R4T2Spp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/R4Spp"
            android:layout_alignBottom="@+id/R4Spp"
            android:layout_toRightOf="@+id/R4Spp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="scoreGame"
        android:text="@string/next_step" />

</RelativeLayout>